<resources>
    <string name="app_name">AJ Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_intersection">Intersection of 2 vectors</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="tg_x">tg(x)</string>
    <string name="_0_00">0.00</string>
    <string name="cos_x">cos(x)</string>
    <string name="sin_x">sin(x)</string>
    <string name="ln_x">ln(x)</string>
    <string name="pow">^</string>
    <string name="e_x">e^x</string>
    <string name="pi">п</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="point">.</string>
    <string name="division">/</string>
    <string name="multi">*</string>
    <string name="sum">+</string>
    <string name="minus">-</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="equal">=</string>
    <string name="delete">C</string>
    <string name="calculator">Calculator</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_about">About</string>
    <string name="List">Список формул</string>
    <string name="List_for_save">list</string>
    <string name="MyPref">myPref</string>
    <string name="Notes">Notes</string>
    <string name="welcome_text">Welcome to our maths app</string>
    <string name="variableX">X</string>
    <string name="graphClear">Очистить</string>
    <string name="graphDraw">Нарисовать</string>
    <string name="graphInputTitle">Введите формулу:</string>
    <string name="GraphTitle">Построение Графиков</string>
    <string name="aboutTitle">О приложении</string>

    <string-array name="List1">
        <item>Производные</item>
        <item>Пересечение векторов</item>
        <item>Общие формулы</item>
    </string-array>
</resources>
