<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/calc_icon"
            android:title="@string/calculator"
             />
        <item
            android:id="@+id/nav_intersection"
            android:icon="@drawable/intersection_icon"
            android:title="@string/menu_intersection"
            />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/graph_icon"
            android:title="@string/menu_graph" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes_icon"
            android:title="@string/notes"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/menu_about" />


    </group>



</menu>
