<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calc">

    <fragment
        android:id="@+id/nav_calc"
        android:name="com.example.myapplication.ui.calculator.CalculatorFragment"
        android:label="Calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_intersection"
        android:name="com.example.myapplication.ui.intersection.IntersectFragment"
        android:label="@string/menu_intersection"
        tools:layout="@layout/fragment_intersection" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.myapplication.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.myapplication.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.myapplication.ui.notes.NotesFragment"
        android:label="@string/Notes"
        tools:layout="@layout/fragment_notes" />


</navigation>